# PersonalProjects

./: Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Compare.cpp  Compare.h  DirectionalLight.cpp  DirectionalLight.h  Disk.cpp  Disk.h  ImageOutput.cpp  ImageOutput.h  Light.cpp  Light.h  Matrix3X3.h  Options.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  README.md  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shadow.cpp  Shadow.h  Shape.h  Sphere.cpp  Sphere.h  Stripes.cpp  Triangle.cpp  Triangle.h  Vector3D.cpp  Vector3D.h  main.cpp
Colors and Main/: Color.h  ImageOutput.cpp  ImageOutput.h  Matrix.cpp  Matrix.h  Vector3D.cpp  Vector3D.h
Lights and Camera/: Camera.cpp  Camera.h  Compare.cpp  DirectionalLight.h  Options.cpp  PointLight.h  Ray.h
Shapes/: Box.cpp  Plane.h  Stripes.h
